syntax = "proto3";

package io.mystore.order.action;

import "akkaserverless/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "io/mystore/cart/entity/shopping_cart_entity.proto";

option java_outer_classname = "CartToOrderActionService";

service CartToOrder {
  option (akkaserverless.service) = {
    type: SERVICE_TYPE_ACTION
  };

  rpc OnCartCheckedOut(cart.entity.CartCheckedOut) returns (google.protobuf.Empty) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "shopping_cart"
    };
  }

  rpc IgnoreOtherEvents(google.protobuf.Any) returns (google.protobuf.Empty) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "shopping_cart"
    };
  }
}
